# rpi-projects

./: .gitignore  README.md  cross.cmake  wait_for_build.bat
first-project/: CMakeLists.txt
first-project/src/: hello_word.c  http_test.cpp  network_info.c  resource.cpp  tcp_server.c
